--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banque Manager</title>
     <link rel="stylesheet" href="./css/app.css" id="colorTheme" />
-    <script src="./js/app.js" defer></script>
+    
   </head>
   <body>
     <section class="hero">
       <h1>_Bijour Banque <span>💶</span></h1>
-      <h2 id="total">+ 421.01 €</h2>
+      <h2 id="total"></h2>
     </section>
     <section>
       <div class="row">
         <div class="column credit">
-          crédit : <span class="txt-color-white" id="totalCredit">1520 €</span>
+          crédit : <span class="txt-color-white" id="totalCredit"></span>
         </div>
         <div class="column debit">
-          débit : <span class="txt-color-white" id="totalDebit">1098.99 €</span>
-          <span class="percent txt-color-white" id="totalDebitPercent"
-            >72.29%</span
-          >
+          débit : <span class="txt-color-white" id="totalDebit"></span>
+          <!-- <span class="percent txt-color-white" id="totalDebitPercent"
+            ></span
+          > -->
         </div>
       </div>
       <form action="#" id="">
         <select name="operation" id="operation">
-          <option valeur="credit">+</option>
-          <option valeur="debit">-</option>
+          <option value="credit">+</option>
+          <option value="debit">-</option>
         </select>
         <input
           type="text"
@@ -48,29 +48,30 @@
       <div class="row">
         <div class="column">
           <h4 class="txt-color-gazoil">crédit</h4>
-          <ul>
-            <li>
-              <span class="intitule">salaire</span>
-              <span class="montant txt-color-gazoil">1520 €</span>
-            </li>
+          <ul id="credit">
+            <!-- <li>
+              <span class="intitule"></span>
+              <span class="montant txt-color-gazoil"></span>
+            </li> -->
           </ul>
         </div>
         <div class="column">
           <h4 class="txt-color-red">débit</h4>
-          <ul>
-            <li>
-              <span class="intitule">achat PS4</span>
-              <span class="montant txt-color-red">499.99 €</span>
-              <span class="percent txt-color-red">32.89%</span>
+          <ul id="debit">
+            <!-- <li>
+              <span class="intitule"></span>
+              <span class="montant txt-color-red"></span>
+              <span class="percent txt-color-red"></span>
             </li>
             <li>
-              <span class="intitule">achat TV</span>
-              <span class="montant txt-color-red">599 €</span>
-              <span class="percent txt-color-red">39.40%</span>
-            </li>
+              <span class="intitule"></span>
+              <span class="montant txt-color-red"></span>
+              <span class="percent txt-color-red"></span>
+            </li> -->
           </ul>
         </div>
       </div>
     </div>
+    <script src="./js/app.js" defer></script>
   </body>
 </html>
